# dir2txt

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: common.rs  edge_cases.rs  error_handling.rs  integration_tests.rs  unit_tests.rs
