[package]
name = "dir2txt"
version = "0.3.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = { version = "1.1", features = ["preserve_order"] }
content_inspector = { version = "0.2" }
# encoding_rs = { version = "0.8", features = ["serde", "simd-accel"] }
# clap = { version = "4.6", features = ["derive"] }
# arboard = { version = "3.6", features = ["wayland-data-control", "windows-sys"], default-features = false }
# confy = "2.0"
# chrono = { version = "0.4", features = ["serde"] }
# thiserror = { version = "2.0" }

[dev-dependencies]
tempfile = "3"
